# constraint-race-detection

./: .gitignore  CMakeLists.txt  README.md  event.cpp  expr.cpp  makefile  maximal_casual_model.cpp  rvpredict.cpp  trace.cpp  trace_generator.cpp
formatted_logs/: rv_predict_trace.txt  sample_trace.txt  sample_trace2.txt
logs/: rv_predict_trace.txt  sample_trace.txt  sample_trace2.txt
scripts/: benchmark.sh  convert.py  data_vis.ipynb  line_counter.sh  lock_experiment.py  lock_experiment.sh  lock_vis.ipynb  rapid_run.sh  runner.sh  rvpredict_to_csv.sh  statistics_parser.py  std_converter.py
src/: BSlogger.hpp  casual_model.cpp  casual_model.h  casual_model.hpp  cmd_argument_parser.cpp  constraint_model.cpp  event.cpp  event.h  event.hpp  expr.cpp  lock_region.h  lock_region.hpp  lock_set_engine.cpp  lockset_engine.h  lockset_engine.hpp  logger.hpp  maximal_casual_model.cpp  model_logger.cpp  model_logger.h  model_logger.hpp  predictor.cpp  rvpredict.cpp  thread.h  thread.hpp  trace.cpp  trace.h  trace.hpp  trace_generator.cpp  transitive_closure.cpp  transitive_closure.h  transitive_closure.hpp  variable.h  variable.hpp  vec_transitive_closure.hpp  vector_clock.hpp  verifier.cpp  z3_maximal_casual_model.cpp  z3_v3_model.cpp  z3_v4_model.cpp
src/experiments/: custom_maximal_casual_model.cpp  expr.cpp  model.cpp  partial_maximal_casual_model.cpp  z3_maximal_casual_model.cpp  z3_v3_model.cpp
tests/: event_test.cpp  lock_region_test.cpp
